crates/server/tests/analysis/snapshots/r#mod__analysis__alpha060__forward_reference_multiple_functions.snap
---
source: crates/server/tests/analysis/alpha060.rs
expression: "symbol_table.symbols.iter().map(|(_, symbol_info)|\nsymbol_info.to_string(&generic_types)).collect::<Vec<String>>()"
---
[
    "fun a(x: Int): Int",
    "x: Int",
    "fun b(x: Int): Int",
    "x: Int",
    "fun b(x: Int): Int",
    "x: Int",
    "fun c(x: Int): Int",
    "x: Int",
    "fun c(x: Int): Int",
    "x: Int",
    "x: Int",
    "result: Int",
    "fun a(x: Int): Int",
]
