crates/server/tests/analysis/snapshots/r#mod__analysis__alpha060__mutual_recursion.snap
---
source: crates/server/tests/analysis/alpha060.rs
expression: "symbol_table.symbols.iter().map(|(_, symbol_info)|\nsymbol_info.to_string(&generic_types)).collect::<Vec<String>>()"
---
[
    "fun is_even(n: Int): Bool",
    "n: Int",
    "n: Int",
    "fun is_odd(n: Int): Bool",
    "n: Int",
    "fun is_odd(n: Int): Bool",
    "n: Int",
    "n: Int",
    "fun is_even(n: Int): Bool",
    "n: Int",
]
