crates/server/tests/analysis/snapshots/r#mod__analysis__alpha060__no_unused_warning_for_narrowed_variable.snap
---
source: crates/server/tests/analysis/alpha060.rs
expression: backend.files.unused_diagnostics
---
{
    (
        FileId(
            0,
        ),
        FileVersion(
            1,
        ),
    ): [
        (
            "Unused function \"test_narrowing\"",
            5..19,
        ),
    ],
}
