crates/server/tests/analysis/snapshots/r#mod__analysis__alpha060__pub_const_array_destruct_init.snap
---
source: crates/server/tests/analysis/alpha060.rs
expression: symbol_table.symbols
---
{
    12..=13: SymbolInfo {
        name: "a",
        symbol_type: Variable(
            VariableSymbol {
                is_const: true,
                is_public: true,
            },
        ),
        data_type: Int,
        is_definition: true,
        undefined: false,
        span: 12..13,
        contexts: [],
    },
    15..=16: SymbolInfo {
        name: "b",
        symbol_type: Variable(
            VariableSymbol {
                is_const: true,
                is_public: true,
            },
        ),
        data_type: Int,
        is_definition: true,
        undefined: false,
        span: 15..16,
        contexts: [],
    },
}
