crates/server/tests/analysis/snapshots/r#mod__analysis__alpha060__pub_const_import-2.snap
---
source: crates/server/tests/analysis/alpha060.rs
expression: backend.files.errors
---
{
    (
        FileId(
            0,
        ),
        FileVersion(
            1,
        ),
    ): [
        (
            "File doesn't exist",
            26..31,
        ),
        (
            "\"MAX_SIZE\" is not defined",
            41..49,
        ),
    ],
}
