crates/server/tests/analysis/snapshots/r#mod__analysis__alpha060__pub_const_import.snap
---
source: crates/server/tests/analysis/alpha060.rs
expression: "symbol_table.symbols.iter().map(|(_, symbol_info)|\nsymbol_info.to_string(&generic_types)).collect::<Vec<String>>()"
---
[
    "import \"lib\"",
    "x: Null",
    "MAX_SIZE: Null",
]
