crates/server/tests/analysis/snapshots/r#mod__analysis__alpha060__pub_let_with_flag_no_error-2.snap
---
source: crates/server/tests/analysis/alpha060.rs
expression: symbol_table.public_definitions
---
{
    "counter": SymbolLocation {
        file: (
            FileId(
                0,
            ),
            FileVersion(
                1,
            ),
        ),
        start: 33,
        end: 40,
    },
}
